--- a/css/style.css
+++ b/css/style.css
@@ -136,7 +136,9 @@ body.dayMode #_1st-toggle-btn span {
 /* First toggle btn completed */
 
 main {
-    margin-top: 80px;
+    width: 1366px;
+    max-width: 100%;
+    margin: 80px auto 0px;
 }
 
 section.common {
